tests/invalid/loops/paren_mismatch.rs
/*
fail: 1
*/

main(): int {
    for (i: int = 2; ))
        a: int = 0;
}